# pyculiar

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  security.yml
examples/: example.py  example_2.py
pyculiar/: __init__.py  detect_anoms.py  detect_ts.py
pyculiarity/: __init__.py  date_utils.py  detect_anoms.py  detect_ts.py  stl.py
pyculiarity/_cext/: anomaly_module.c  anomaly_module.pyi
tests/: test_edge.py  test_golden_decomposition.py  test_golden_detect_anoms.py  test_golden_detect_ts.py  test_golden_statistics.py  test_na.py  test_ts.py  test_validation.py
