[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyculiar"
version = "0.2.0"
description = "Anomaly detection for time series using S-H-ESD, with a C extension for performance."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Will McGinnis", email = "will@predikto.com" },
]
keywords = ["data", "anomaly", "detection", "pandas", "timeseries"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
]
dependencies = [
    "numpy",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "scipy", "statsmodels"]

[project.urls]
Homepage = "https://github.com/wdm0006/pyculiarity"

[tool.setuptools.packages.find]
include = ["pyculiar*"]

[tool.setuptools.package-data]
"pyculiar._cext" = ["*.c", "*.pyi"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
